--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -21,6 +21,7 @@ CONFIG_MSM_RDBG=m
 CONFIG_VFP=y
 CONFIG_EXT3_FS_XATTR=y
 CONFIG_AEABI=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_SECCOMP=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BLK_DEV_DM=y
@@ -485,6 +486,7 @@ CONFIG_TRACE_CLOCK=y
 CONFIG_LOG_BUF_SHIFT=17
 CONFIG_EXTRA_FIRMWARE=""
 CONFIG_NET_VENDOR_8390=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_VFAT_FS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 CONFIG_IPC_ROUTER_SECURITY=y
@@ -554,6 +556,7 @@ CONFIG_USB_CCID_BRIDGE=y
 CONFIG_QSEECOM=y
 CONFIG_IIO_BUFFER=y
 CONFIG_GPIO_SYSFS=y
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_FW_LOADER=y
 CONFIG_KALLSYMS=y
 CONFIG_WCD9306_CODEC=y
@@ -651,6 +654,7 @@ CONFIG_CLONE_BACKWARDS=y
 CONFIG_BLK_DEV_RAM_COUNT=16
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_MSM_OCMEM_DEBUG=y
+CONFIG_MSM_CPU_FREQ_MIN=250000
 CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_PREEMPT_RCU=y
 CONFIG_NF_NAT_NEEDED=y
@@ -719,7 +723,7 @@ CONFIG_DEBUG_KERNEL=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_COMPAT_BRK=y
-CONFIG_LOCALVERSION="custom"
+CONFIG_LOCALVERSION="-v2-ondemand"
 CONFIG_RADIO_IRIS=y
 CONFIG_RADIO_ADAPTERS=y
 CONFIG_MSM_SCM=y
@@ -867,6 +871,7 @@ CONFIG_ARCH_MSM_CORTEXMP=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_IFB=y
 CONFIG_HAS_IOPORT=y
+CONFIG_MSM_CPU_FREQ_MAX=787200
 CONFIG_OF_EARLY_FLATTREE=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_HZ=100
