--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -7,6 +7,7 @@ CONFIG_IP_NF_TARGET_REDIRECT=Y
 CONFIG_CRC32=Y
 CONFIG_NF_NAT_PROTO_SCTP=Y
 CONFIG_MSM_RDBG=M
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=Y
 CONFIG_BLK_DEV_DM=Y
 CONFIG_MSM_RPM_LOG=Y
 CONFIG_NF_CONNTRACK_NETBIOS_NS=Y
@@ -200,6 +201,7 @@ CONFIG_ION_MSM=Y
 CONFIG_MSM_ADSP_LOADER=Y
 CONFIG_CHR_DEV_SCH=Y
 CONFIG_CRYPTO_HASH=Y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=Y
 CONFIG_VFAT_FS=Y
 CONFIG_USB_LIBCOMPOSITE=Y
 CONFIG_MSM_ADSPRPC=Y
